maj Slider et design page principal (responsive)

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -38,7 +38,7 @@
             "company": "The hosting of this website is provided by : "
         },
         "terms-of-use": {
-            "text": ""
+            "text": "The present terms and conditions govern navigation on the www.champagne-xavier-laluc.com website for all Internet users. By using the Site, the User acknowledges having read and accepted without reservation the present General Conditions of Use ('the GCU') which govern the conditions of access, navigation and use of the Site. We reserve the right to modify and/or update these Terms of Use by publishing a new version on our Site. We therefore invite you to consult them regularly."
         }
     },
     "legalNotice": {
