--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -184,7 +184,7 @@
             }
         }
     },
-    "histoire": {
+    "history": {
         "title": "Qui sommes nous ?",
         "intro": "Vigneron propriétaire, récoltant coopérateur depuis 3 générations, nous apportons toute notre attention aux parcelles issues de nombreuses transmissions remontant à des origines connues depuis 1670. Certaines de ces terres se sont trouvées être propices à la culture de la vigne de par leurs sous-sols à tendance calcaire et sablonneux-calcaire, leurs pentes orientées sud-est et leur bel ensoleillement. Ces 3 éléments réunis apportent aux vins un développement de qualité avec une touche de fraîcheur. Ainsi, suite à l'utilisation de porte-greffe éloignant la maladie du phylloxera, les replantations de vigne dans la famille ont eu lieu dès 1956. Chaque année, si les soins débutent dès la taille de la vigne en hiver, ils ne finissent que par la vendange à la main. C'est pourquoi Xavier aime à dire à ses 3 enfants, Clémence, Héloïse et Pierre-Baptiste « Le végétal nous parle ». Attentifs à l'environnement dans lequel nous évoluons depuis de nombreuses années, nous récupérons les eaux de pluie, travaillons le sol et enherbons nos vignes. De cette manière, nous tentons de limiter autant que possible les intrants et de réduire à notre échelle le Co2. L'exploitation est certifiée VDC : viticulture durable en Champagne."
     }
