fix style et en

--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,6 +1,6 @@
 {
     "nav": {
-        "name": "Laluc",
+        "name": "X.Laluc",
         "about-us": "A propos de nous",
         "product": "Nos produits",
         "terroir": "Notre terroir",
